# solax-modbus

./: .framework-ref  .gitignore  LICENSE  README.md  add_toc_links.py  build.sh  install.sh  pyproject.toml  requirements.txt
ai/: context.md  governance.md  instructions.md  obsidian_markdown_guidelines.md  primer.md  workflow.md
ai/ael/: README.md  config.yaml  config.yaml.bak  requirements.txt
ai/doc/: guide-ael-operations.md  guide-audit-loop.md  guide-govwatch.md
ai/profiles/: README.md  claude-omlx.md  claude.md  mlx_devstral_magistral_heterogeneous.md  mlx_devstral_small_2_2512_6bit.md  mlx_devstral_small_2_2512_8bit.md  mlx_north_mini_code_1_0_6bit.md
ai/src/: govwatch.py
ai/templates/: T01-design.md  T02-change.md  T03-issue.md  T04-prompt.md  T05-test.md  T06-result.md  T07-requirements.md  T08-audit.md
ai/workspace/: README.md
docs/: deployment-guide.md  development-testing-guide.md  development.md  guide.md  pi-setup.md
docs/closed/: development.md  pi-setup.md
docs/design/: solax-modbus-poc.md  solax-modbus-software-design-specification.md
docs/verification/: design-specification-correction-plan.md  design-specification-verification-checklist.md  register-map-verification-report.md
emulator/: README.md
governance/: README.md  governance.md
src/: solax_poll.py
src/emulator/: solax_emulator.py
src/solax_modbus/: main.py
tests/: README.md  test_solax_poll.py
workspace/: README.md  llm-orchestration-issues-analysis.md  phase-2-bootstrap-prompt-v2.md  phase-2-bootstrap-prompt.md  phase-2-register-correction.md
(+146 files in other folders)
