[project]
name = "solax-modbus"
version = "0.1.0"
description = "Modbus TCP monitoring system for Solax X3 Hybrid solar inverters"
authors = [{name = "William Watson"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "pymodbus>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
solax-monitor = "solax_modbus.main:main"

[build-system]
requires = ["setuptools>=61.0", "build>=0.10.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
